--- a/css/nametagapp.webflow.css
+++ b/css/nametagapp.webflow.css
@@ -424,7 +424,7 @@ a {
   margin: 20px 0px 0px;
   padding: 10px;
   background-color: #ffdec7;
-  font-size: 24px;
+  font-size: 22px;
   line-height: 24px;
   font-weight: 600;
 }
@@ -1762,7 +1762,8 @@ a {
   }
 
   .button-2 {
-    margin: 13px 0px 0px 20px;
+    width: 140px;
+    margin: 15px 20px 0px;
     padding: 7px;
     font-size: 16px;
   }
@@ -1771,7 +1772,7 @@ a {
     width: 140px;
     padding-top: 9px;
     padding-bottom: 9px;
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .button-2.color.main {
@@ -1779,6 +1780,11 @@ a {
     padding: 10px 25px;
     font-size: 18px;
     line-height: 20px;
+  }
+
+  .button-2.color._1 {
+    margin-left: 55px;
+    text-align: center;
   }
 
   .button-2.white {
@@ -2000,6 +2006,10 @@ a {
   .image-28 {
     left: 0px;
     margin: 0px 100px 60px;
+  }
+
+  .image-29 {
+    max-width: 50%;
   }
 
   .link-block-7 {
@@ -2284,23 +2294,29 @@ a {
   }
 
   .button-2 {
+    width: 130px;
     max-width: 200px;
-    margin: 5px 20px 5px 0px;
+    margin: 10px 20px 5px;
     padding-right: 3px;
     padding-left: 3px;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 16px;
-    text-align: right;
+    text-align: center;
   }
 
   .button-2.color {
     width: 120px;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .button-2.color.main {
     font-size: 18px;
     line-height: 18px;
+  }
+
+  .button-2.color._1 {
+    margin-left: 65px;
+    text-align: center;
   }
 
   .button-2.white {
@@ -2629,6 +2645,18 @@ a {
     margin-top: 80px;
   }
 
+  .heading-4 {
+    margin-left: 20px;
+  }
+
+  .div-block-2 {
+    margin-left: 20px;
+  }
+
+  .image-29 {
+    max-width: 80%;
+  }
+
   .link-block-7 {
     width: 170px;
     height: 47px;
@@ -2685,7 +2713,7 @@ a {
   .nav-link-2 {
     position: fixed;
     left: auto;
-    top: 2%;
+    top: 5%;
     right: 0%;
     bottom: auto;
     display: -webkit-box;
@@ -2715,7 +2743,7 @@ a {
 
   .nav-link-2.outline {
     left: auto;
-    top: 4%;
+    top: 11%;
     right: 0%;
     bottom: auto;
     display: -webkit-box;
@@ -2767,6 +2795,18 @@ a {
 
   .icon-2 {
     color: #333;
+  }
+
+  .image-33 {
+    margin-right: 20px;
+  }
+
+  .section-15 {
+    margin-left: 20px;
+  }
+
+  .section-16 {
+    margin-left: 20px;
   }
 }
 
@@ -2995,7 +3035,7 @@ a {
     justify-content: center;
     border-color: #000;
     color: #000;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .button-2.color.main {
@@ -3016,6 +3056,10 @@ a {
     font-size: 14px;
     line-height: 14px;
     text-align: center;
+  }
+
+  .button-2.color._1 {
+    margin-left: 75px;
   }
 
   .button-2.white {
@@ -3367,6 +3411,39 @@ a {
     margin-top: 60px;
   }
 
+  .utility-page-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .utility-page-content {
+    margin-right: 20px;
+    margin-left: 0px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+    -webkit-box-ordinal-group: 0;
+    -webkit-order: -1;
+    -ms-flex-order: -1;
+    order: -1;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+  }
+
   .link-block-7 {
     width: 150px;
     height: 41px;
@@ -3411,6 +3488,50 @@ a {
     bottom: 0%;
     height: auto;
     max-width: none;
+  }
+
+  .section-14 {
+    position: relative;
+    left: -120px;
+    display: inline-block;
+    width: 150px;
+    margin-left: 0px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    grid-auto-columns: 1fr;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+
+  .image-33 {
+    overflow: hidden;
+    max-width: 60%;
+    margin-right: 0px;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
   }
 }
 
