--- a/css/nametagappfinal.webflow.css
+++ b/css/nametagappfinal.webflow.css
@@ -485,7 +485,11 @@ a {
 .button-2.color._1 {
   margin-right: 60px;
   margin-bottom: 0px;
-  margin-left: 50px;
+  margin-left: 60px;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   font-size: 16px;
 }
 
@@ -1311,18 +1315,33 @@ a {
   -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
 }
 
 .heading-3 {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   font-family: Karla, sans-serif;
   font-weight: 800;
 }
 
 .field-label-5 {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   font-family: Karla, sans-serif;
 }
 
 .text-field-3 {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   font-family: Karla, sans-serif;
 }
 
@@ -1344,8 +1363,8 @@ a {
 .image-29 {
   display: block;
   max-width: 30%;
-  margin-top: -76px;
-  margin-left: 180px;
+  margin-top: 6px;
+  margin-left: 22px;
   text-align: left;
 }
 
@@ -2294,6 +2313,16 @@ a {
   font-weight: 600;
 }
 
+.image-47 {
+  max-width: 40%;
+  margin-top: -57px;
+  margin-left: 92px;
+}
+
+.image-48 {
+  margin-left: 200px;
+}
+
 @media screen and (max-width: 991px) {
   .heading {
     left: 20px;
@@ -2782,12 +2811,31 @@ a {
 
   .image-29 {
     max-width: 50%;
-    margin-top: -48px;
+    margin-top: 60px;
     margin-left: 0px;
   }
 
   .text-block-32 {
+    position: absolute;
     width: 500px;
+    margin-left: -89px;
+  }
+
+  .text-block-32.a {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: -20px;
+    margin-left: 0px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 
   .link-block-7 {
@@ -2806,6 +2854,7 @@ a {
   }
 
   .accordion-heading {
+    margin-right: 20px;
     line-height: 24px;
   }
 
@@ -2823,6 +2872,7 @@ a {
   }
 
   .bold-text-7 {
+    margin-right: 20px;
     line-height: 24px;
   }
 
@@ -2833,7 +2883,7 @@ a {
     font-size: 16px;
     line-height: 22px;
     text-transform: none;
-    /* white-space: break-spaces; */
+    white-space: break-spaces;
     -o-object-fit: scale-down;
     object-fit: scale-down;
   }
@@ -3031,6 +3081,17 @@ a {
     text-align: center;
   }
 
+  .text-block-41.a {
+    display: block;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 30px;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+  }
+
   .youtube-3 {
     display: block;
     width: 500px;
@@ -3072,6 +3133,7 @@ a {
 
   .grid-17 {
     width: 328px;
+    margin-top: 0px;
   }
 
   .text-a {
@@ -3082,6 +3144,18 @@ a {
   .image-46 {
     width: auto;
     max-width: 150%;
+  }
+
+  .image-47 {
+    max-width: 60%;
+    margin-top: 16px;
+    margin-left: 16px;
+  }
+
+  .image-48 {
+    max-width: 50%;
+    margin-top: 130px;
+    margin-left: 127px;
   }
 }
 
@@ -3696,11 +3770,12 @@ a {
 
   .image-29 {
     max-width: 100%;
-    margin-left: -51px;
+    margin-left: -16px;
   }
 
   .text-block-32 {
-    width: 300px;
+    width: 500px;
+    margin-left: -181px;
   }
 
   .link-block-7 {
@@ -4061,6 +4136,10 @@ a {
     grid-template-rows: auto auto auto;
   }
 
+  .text-block-41.a {
+    padding-top: 20px;
+  }
+
   .youtube-3 {
     width: 400px;
   }
@@ -4070,7 +4149,7 @@ a {
     display: grid;
     margin-top: 0px;
     margin-left: -85px;
-    padding-top: 100px;
+    padding-top: 40px;
     padding-bottom: 100px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -4097,6 +4176,17 @@ a {
   .text-a {
     margin-right: -70px;
     margin-left: -70px;
+  }
+
+  .image-47 {
+    max-width: 80%;
+    margin-left: -54px;
+  }
+
+  .image-48 {
+    max-width: 80%;
+    margin-top: 143px;
+    margin-left: 44px;
   }
 }
 
@@ -4360,7 +4450,7 @@ a {
   }
 
   .button-2.color._1 {
-    margin-left: 75px;
+    margin-left: 60px;
   }
 
   .button-2.color.top {
@@ -4398,6 +4488,11 @@ a {
     height: auto;
     border-color: #333;
     color: #333;
+  }
+
+  .button-2.a {
+    padding-top: 8px;
+    padding-bottom: 7px;
   }
 
   .button-3 {
@@ -4680,7 +4775,7 @@ a {
   }
 
   .image-25 {
-    height: 150px;
+    height: 200px;
   }
 
   .text-block-28 {
@@ -4778,6 +4873,11 @@ a {
     flex: 0 auto;
   }
 
+  .text-block-32 {
+    width: 300px;
+    margin-left: -90px;
+  }
+
   .link-block-7 {
     width: 150px;
     height: 41px;
@@ -4792,6 +4892,7 @@ a {
   }
 
   .accordion-heading {
+    margin-right: 20px;
     line-height: 24px;
   }
 
@@ -4806,6 +4907,7 @@ a {
   }
 
   .bold-text-7 {
+    margin-right: 20px;
     line-height: 24px;
   }
 
@@ -4925,6 +5027,7 @@ a {
     position: static;
     margin-right: 40px;
     margin-left: 20px;
+    white-space: normal;
   }
 
   .field-label-11 {
@@ -5122,6 +5225,10 @@ a {
     bottom: 0%;
   }
 
+  .text-block-41.a {
+    padding-top: 60px;
+  }
+
   .youtube-3 {
     width: 300px;
   }
@@ -5129,6 +5236,7 @@ a {
   .grid-17 {
     width: 300px;
     margin-left: -171px;
+    padding-top: 60px;
   }
 
   .text-a {
@@ -6491,6 +6599,15 @@ a {
     grid-row-end: 7;
     -ms-grid-row: 6;
     grid-row-start: 6;
+    -ms-grid-column-align: center;
+    justify-self: center;
+  }
+
+  #w-node-_17b51951-8a4f-5f1a-28eb-6dd16593eee3-48e0dee7 {
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
     -ms-grid-column-align: center;
     justify-self: center;
   }
