--- a/css/nametagappfinal.webflow.css
+++ b/css/nametagappfinal.webflow.css
@@ -1,4 +1,4 @@
-.customer-footer-styles {
+.custom-footer-styles {
   position: fixed !important;
   top: unset !important;
   bottom: 0 !important;
